tests/instantiating/virtual_irq_group/stderr.golden
error: cannot add irq 'i' to virtual group 'g', virtual irq group makes no sense
bus.fbd +4:5
   |
 4 |     i irq
   |     ^
